# obj_left

./: CBM_model.cpp  CBM_model.h  CMakeLists.txt  ObjLeftDetect.cpp  ObjLeftDetect.h  VideoDetails.cpp  VideoDetails.h  main.cpp  myDIP.cpp  myDIP.h  myGMM.cpp  myGMM.h  myUtility.cpp  myUtility.h  opencvheader.h  parameter.h  parameter.txt  test.cu  test.h
